--- a/app/home.html
+++ b/app/home.html
@@ -7,6 +7,7 @@
 		<link rel="icon" href="favicon.gif" type="image/gif">
 		<title>Home</title>
 		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/home.css">
 		<link rel="stylesheet" href="css/button.css">
 		<link rel="stylesheet" href="css/filebrowser.css">
 		<script src="/socket.io/socket.io.js"></script>
@@ -16,45 +17,100 @@
 	<body onload="bootstrap()">
 	<div class="header">
 		<div id="logo"></div>
-		<div id="version">Ver.1.1</div>
 	</div>
+		
+	<div id="confirm_area">
+	</div>
+	<div id="exist_warning_dialog" class="confirm_dialog">
+		<div id="confirm_message" class="confirm_project_message">
+			<p>The name of project already exists. </p>
+			<span>Created as </span><span id="confirm_projectname"></span>
+			<div id="confirm_button">
+				<button class="confirm_project_button" id="button_ok" type="button">
+					<span class="confirm_button_text">OK</span></button>
+			</div>
+		</div>
+	</div>
+	<div id="newproject_name_dialog" class="confirm_dialog">
+		<div class="confirm_project_message">
+			<p>New Project created as</p>
+			<span id="new_projectname"></span>
+			<div id="confirm_button">
+				<button class="confirm_project_button" id="newproject_name_button_ok" type="button">
+					<span class="confirm_button_text">OK</span></button>
+			</div>
+		</div>
+	</div>
+		
 	<div class="tab">
 		<div class="pane_left" id="button_menus">
-			<button type="button" class="button_menu" onclick="newProject()"><span class="text_button_menu">New Project</span></button><br>
-			<button type="button" class="button_menu" onclick="registerRemoteHost()"> <span class="text_button_menu">Register host</span></button><br>
-			<button type="button" class="button_menu" onclick="openFileBrowser()"><span class="text_button_menu">File Browser</span></button><br>
-			<button type="button" class="button_menu" onclick="openKDB()"> <span class="text_button_menu">Knowledge DB</span></button><br>
+			<button type="button" class="button_menu" onclick="showNewProjectDialog()"><span class="text_button_menu">New Project</span></button><br>
+			<button type="button" class="button_menu" onclick="showProjectDialog()"><span class="text_button_menu">Open Project</span></button><br>
 		</div>
-		<div class="pane_right">
+		<div class="pane_right"  id="button_menus">
+			<button type="button" class="button_menu" onclick="showProjectArchiveDialog()"><span class="text_button_menu">Open Project Archive</span></button><br>
+			<button type="button" class="button_menu" onclick="showRecentProjectDialog()"><span class="text_button_menu">Open Recent Project</span></button><br>
+		</div>
+	</div>
+		
+	<div class="pane_bottom">
+		<button type="button" class="button_menu_bottom" onclick="registerRemoteHost()"> <span class="text_button_menu_bottom">Register host</span></button>
+		<button type="button" class="button_menu_bottom" onclick="openFileBrowser()"><span class="text_button_menu_bottom">File Browser</span></button>
+		<button type="button" class="button_menu_bottom" onclick="openKDB()"> <span class="text_button_menu_bottom">Knowledge DB</span></button>
+	</div>
+
+	<div class="popup_center" id="recent_project">
+		<div class="popup_content">
 			<div class="text_recent">Recent Project</div>
 			<div class="historybrowser" id="projectHistoryList">
 				<div style="display:none">
 					<div class="fileitem" id="projectHistoryList_itemtemplate" draggable="false" onclick="openProject(this.path)" ><div class="dir"></div><p class="filelabel" id="label">project1</p></div>
 				</div>
 			</div>
-			<div class="grp_alignright">
-				<button type="button" class="button_open" onclick="openfileDialog('/')">
+			<div class="historybrowser_buttons">
+				<button type="button" class="button_open" onclick="openFolderDialog('/')">
 					<span class="text_button_action">Browse</span>
+				</button>
+				<button type="button" class="button_cancel" onclick="closeRecentProjectDialog()">
+					<span class="text_button_action">Cancel</span>
 				</button>
 			</div>
 		</div>
 	</div>
-
-	<div class="popup_center">
-		<div class="pane_grp"><input class="input_filedialog" id="projdir_path" value="localhost:/home/hirose/project1"/></div>
-		<div class="filebrowser filedialog" id="fbList">
-		<!--	<div class="fileitem" id="dir1" draggable="false" onclick="select_targetDir()"><div class="back"></div><p class="filelabel">..</p></div>
-			<div class="fileitem" id="dir2" draggable="false" onclick="select_targetDir()"><div class="dir"></div><p class="filelabel">dir1</p></div>-->
-			<!--<div class="fileitem" id="file1" draggable="false"><div class="file"></div><p class="filelabel">file1</p></div>-->
-		</div>
-		<div class="buttons_dialog">
-			<button type="button" class="button_open" onclick="open_selectedFile()">
-				<span class="text_button_action">Open</span>
-			</button>
-			<button type="button" class="button_cancel" onclick="closefileDialog()">
-				<span class="text_button_action">Cancel</span>
-			</button>
+		
+	<div class="popup_center" id="file_dialog">
+		<div class="popup_content">
+			<div class="pane_grp">
+				<input class="input_filedialog" id="projdir_path" value="localhost:/"/>
+			</div>
+			<div class="filebrowser filedialog" id="fbList"></div>
+			<div class="buttons_dialog">
+				<button type="button" class="button_open" onclick="openSelectedFile()">
+					<span class="text_button_action">Open</span>
+				</button>
+				<button type="button" class="button_cancel" onclick="closeFileDialog()">
+					<span class="text_button_action">Cancel</span>
+				</button>
+			</div>
 		</div>
 	</div>
+		
+	<div id="new_project">
+		<div class="new_project_content">
+			<div class="newNameLabel">New Project!</div>
+			<input type="text" id="newprojectname" class="input-newproject" placeholder="project name"/>
+			<button class="button_new" id="button_new" onclick="newProject(newprojectname.value)"></button>
+		</div>
+	</div>
+		
+	<div id="extract_archive">
+		<div class="extract_archive_content" id="extract_archive_content">
+			<div class="newArchiveLabel">Input Extract Name</div>
+			<input type="text" id="extractname" class="input-extractarchive" placeholder="extract name"/>
+			<button class="button_new" id="button_new" onclick="extractArchive(extractname.value)"></button>
+		</div>
+	</div>
+		
+	<div class="popup_background" id="popup_background"></div>
 </body>
 </html>
