--- a/app/home.html
+++ b/app/home.html
@@ -41,6 +41,16 @@
 			</div>
 		</div>
 	</div>
+	<div id="archive_warning_dialog" class="confirm_dialog">
+		<div id="confirm_message" class="confirm_project_message">
+			<p>The extension is not supported.</p>
+			<p>Please select tar.gz file.</p>
+			<div id="confirm_button">
+				<button class="confirm_project_button" id="archive_warning_button_ok" type="button">
+					<span class="confirm_button_text">OK</span></button>
+			</div>
+		</div>
+	</div>
 		
 	<div class="tab">
 		<div class="pane_left" id="button_menus">
