add warning dialog at opening file

--- a/app/editor.html
+++ b/app/editor.html
@@ -56,6 +56,17 @@
 			<p>File: Saved</p>
 		</div>
 	</div>
+	<div id="open_warning_dialog" class="confirm_dialog">
+		<div class="confirm_message">
+			<p>The file is not saved. Save file ?</p>
+			<div class="open_warning_button">
+				<button class="confirm_save_button" id="button_save" type="button">
+					<span class="open_warning_button_text">Save</span></button>
+				<button class="confirm_cancel_button" id="button_cancel" type="button">
+					<span class="open_warning_button_text">Cancel</span></button>
+			</div>
+		</div>
+	</div>
 
 	
 	<!--------------------------- menus / browser --------------------------------->
