fix info/log/exec click

--- a/app/editor.html
+++ b/app/editor.html
@@ -25,8 +25,8 @@
 		</div>
 		<div class="change_mode_area_container">
 			<div class="change_mode_area">
-				<button class="button_change_mode" onclick="showInfoView();">Info</button>
-				<button class="button_change_mode" onclick="showExeView();">Log</button>
+				<button class="button_change_mode" id="show_info_button">Info</button>
+				<button class="button_change_mode" id="show_log_button">Log</button>
 				<button class="button_vim_mode" onclick="modeChange(this.value);" disabled value="vim" id="button_vimmode">
 					<span class="vim_mode_text">Vim</span></button>
 			</div>
