fix filebrowser right click fix register host button label

--- a/app/filebrowser.html
+++ b/app/filebrowser.html
@@ -44,8 +44,8 @@
 	<div class="tab_filebrowser">
 	<div class="grp_alignright">
 		<button type="button" class="button_remotehost" onclick="registerRemoteHost()">
-			<span class="registerhost_register_label">Register</span>
-			<span class="registerhost_host_label">host</span></button>
+			<p class="registerhost_register_label">Register</p>
+			<p class="registerhost_host_label">host</p></button>
 	</div>
 		<div class="filebrowser_pane_left">
 			<!--div class="filepath">hirose@localhost:/home/hirose/</div-->
