--- a/app/editor.html
+++ b/app/editor.html
@@ -247,7 +247,7 @@
 				</div>
 			</div>
 			<div class="info_bar"></div>
-			<div class="exe_log_area">
+			<div class="exe_log_area" id="exe_log_area">
 				<pre class="exe_log" id="exe_log"> Log Area
 				</pre>
 			</div>
