--- a/app/home.html
+++ b/app/home.html
@@ -113,13 +113,13 @@
 		</div>
 	</div>
 		
-	<div id="extract_archive">
+	<!--div id="extract_archive">
 		<div class="extract_archive_content" id="extract_archive_content">
 			<div class="newArchiveLabel">Input Extract Name</div>
 			<input type="text" id="extractname" class="input-extractarchive" placeholder="extract name"/>
 			<button class="button_new" id="button_new" onclick="extractArchive(extractname.value)"></button>
 		</div>
-	</div>
+	</div-->
 		
 	<div class="popup_background" id="popup_background"></div>
 </body>
