add Password Authorication

--- a/app/remotehost.html
+++ b/app/remotehost.html
@@ -41,6 +41,11 @@
 					</div>
 					<div class="grp_floatleft">
 						<div class="text_label">Passphrase</div>
+						<input id="input_passphrase" class="input_info" type="password"></input>
+					</div>
+					<div class="grp_floatleft">
+						<div class="text_label">Password</div>
+						<input id="usepassword" class="input_info" type="checkbox"></input>
 						<input id="input_password" class="input_info" type="password"></input>
 					</div>
 					<div class="grp_floatleft">
