add disable color to excluding paths of workspace

--- a/app/editor.html
+++ b/app/editor.html
@@ -88,22 +88,22 @@
 		</div>
 		<div id="filebutton_conainer" class="filebutton_conainer">
 			<div class="shownewfilearea">
-				<button id="button_newdir" onclick="showNewNameArea('newdirArea');">
+				<button id="button_newdir" onclick="window.editor.showNewNameArea('newdirArea');">
 					<span class="newdirectory_new">New</span><br><span class="newdirectory_dir">Directory</span>
 				</button>
 			</div>
 			<div class="shownewfilearea">
-				<button id="button_newfile" onclick="showNewNameArea('newfileArea');">
+				<button id="button_newfile" onclick="window.editor.showNewNameArea('newfileArea');">
 					<span class="newfilearea_file_label">New File</span>
 				</button>
 			</div>
 			<div class="shownewfilearea">
-				<button id="button_rename" onclick="showNewNameArea('renameArea');">
+				<button id="button_rename" onclick="window.editor.showNewNameArea('renameArea');">
 					<span class="newfilearea_label">Rename</span>
 				</button>
 			</div>
 			<div class="shownewfilearea">
-				<button id="button_delete" onclick="showNewNameArea('deleteArea');">
+				<button id="button_delete" onclick="window.editor.showNewNameArea('deleteArea');">
 					<span class="newfilearea_delete_label">Delete</span>
 				</button>
 			</div>
