add node editor files

--- a/app/editor.html
+++ b/app/editor.html
@@ -11,6 +11,7 @@
 	<link href="css/editor_info_view.css" rel="stylesheet"/>
 	<link href="css/editor_exe_view.css" rel="stylesheet"/>
 	<link href="css/editor_edit_view.css" rel="stylesheet"/>
+	<link href="css/editor_node_view.css" rel="stylesheet"/>
 	<!--link href="css/filebrowser.css" rel="stylesheet"/-->
 	<link href="css/backfire.css" rel="stylesheet"/>
 </head>
@@ -257,9 +258,8 @@
 	
 	<!--------------------------- NodeEdit --------------------------------->
 	<span id="node_mode" style="display:none">
-		<div>
-			<svg id="nodecanvas" class="NodeCanvas noneselect">
-			</svg>
+		<div id="node_area" class="node_area">
+			<svg id="nodecanvas" class="NodeCanvas noneselect"></svg>
 		</div>
 	</span>
 		
