change pif.json cif.json to pmd.json cmd.json

--- a/app/editor.html
+++ b/app/editor.html
@@ -176,12 +176,11 @@
 					</div>
 				</div>
 
-				<div class="row">
+				<!--div class="row">
 					<div class="info_title">
 						Workflow File
 					</div>
 					<div class="info_text" id="info_workflow">
-						<!--<a class="info_link" href="#">workflow files</a>-->
 					</div>
 				</div>
 
@@ -191,7 +190,6 @@
 						Case File
 					</div>
 					<div class="info_text" id="info_case">
-						<!--<a class="info_link" href="#">case files</a>-->
 					</div>
 				</div>
 
@@ -200,7 +198,6 @@
 						KDB URL
 					</div>
 					<div class="info_text" id="info_kdb_url">
-						<!--<a class="info_link" href="#">KDB URL</a>-->
 					</div>
 				</div>
 
@@ -209,7 +206,6 @@
 						KDB Modified
 					</div>
 					<div class="info_text" id="info_kdb_change">
-						<!--KDB changes-->
 					</div>
 				</div>
 
@@ -218,7 +214,6 @@
 						KDB Detail
 					</div>
 					<div class="info_text" id="info_kdb_detail_of_change">
-						<!--KDB detail of change-->
 					</div>
 				</div>
 
@@ -227,9 +222,8 @@
 						Log File
 					</div>
 					<div class="info_text" id="info_log">
-						<!--<a class="info_link" href="#">log files</a>-->
 					</div>
-				</div>
+				</div-->
 			</div>
 		</div>
 	</span>
