add animtab to node editor

--- a/app/editor.html
+++ b/app/editor.html
@@ -263,6 +263,9 @@
 			</div>
 			<div class="info_bar"></div>
 			<svg id="nodecanvas" class="NodeCanvas noneselect"></svg>
+			<div class="nodePropertyTab" id="nodePropertyTab">
+				<div id="property" class="nodeProperty"></div>
+			</div>
 		</div>
 	</span>
 		
@@ -289,6 +292,8 @@
 	
 	<script src="src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/socket.io/socket.io.js"></script>
+	<script type="text/javascript" src="js/qatrix-1.1.js"></script>
+	<script type="text/javascript" src="js/animtab.js"></script>
 	<script type="text/javascript" src="js/backfire_filedialog.js"></script>
 	<script type="text/javascript" src="js/editor.js"></script>
 	<script type="text/javascript" src="js/editor_info_view.js"></script>
