add node property for debug

--- a/app/editor.html
+++ b/app/editor.html
@@ -264,7 +264,7 @@
 			<div class="info_bar"></div>
 			<svg id="nodecanvas" class="NodeCanvas noneselect"></svg>
 			<div class="nodePropertyTab" id="nodePropertyTab">
-				<div id="property" class="nodeProperty"></div>
+				<div id="nodeProperty" class="nodeProperty"></div>
 			</div>
 		</div>
 	</span>
