add node list, fix css

--- a/app/editor.html
+++ b/app/editor.html
@@ -264,6 +264,7 @@
 			<div class="info_bar"></div>
 			<svg id="nodecanvas" class="NodeCanvas noneselect"></svg>
 			<div class="nodePropertyTab" id="nodePropertyTab">
+				<div id="nodeList" class="nodeList"></div>
 				<div id="nodeProperty" class="nodeProperty"></div>
 			</div>
 		</div>
