--- a/app/editor.html
+++ b/app/editor.html
@@ -278,7 +278,7 @@
 		<div>
 			<pre id="editor"></pre>
 			<button class="button_save_editor" id="button_save_editor"
-					onClick="saveFile();"
+					onClick="window.editor.saveFile();"
 					onMouseover="this.style.opacity=1.0;"
 					onMouseout="this.style.opacity=0.6" title='Save File (CTRL + S)'>
 				<span class="save_label">Save</span>
