--- a/app/editor.html
+++ b/app/editor.html
@@ -301,7 +301,7 @@
 	<script type="text/javascript" src="js/editor_exe_view.js"></script>
 	<script type="text/javascript" src="js/editor_edit_view.js"></script>
 	<script type="text/javascript" src="js/editor_node_view.js"></script>
-	<script type="text/javascript" src="js/svg.min.js"></script>
+	<script type="text/javascript" src="js/svg.js"></script>
 	<script type="text/javascript" src="js/svg.draggable.js"></script>
 	<script type="text/javascript" src="js/svg.nodeui.js"></script>
 </body>
