--- a/app/editor.html
+++ b/app/editor.html
@@ -262,7 +262,9 @@
 				</span>
 			</div>
 			<div class="info_bar"></div>
-			<svg id="nodecanvas" class="NodeCanvas noneselect"></svg>
+			<div id="nodediv" class="nodeDiv noneselect">
+				<svg id="nodecanvas" class="NodeCanvas noneselect"></svg>
+			</div>
 		</div>
 	</span>
 	<div class="nodePropertyTab" id="nodePropertyTab">
