--- a/app/editor.html
+++ b/app/editor.html
@@ -29,6 +29,7 @@
 				<button class="button_change_mode" id="show_node_button">Workflow</button>
 				<button class="button_change_mode" id="show_info_button">Info</button>
 				<button class="button_change_mode" id="show_log_button">Log</button>
+				<button class="button_change_mode" id="show_register_button">Host</button>
 				<button class="button_vim_mode" onclick="window.editor_edit_view.modeChange(this.value);" disabled value="vim" id="button_vimmode">
 					<span class="vim_mode_text">Vim</span></button>
 			</div>
