add password confirm dialog

--- a/app/editor.html
+++ b/app/editor.html
@@ -294,11 +294,26 @@
 	
 	<!---------------------------------------------------------------------->
 	
+	<div class="popup_background" id="popup_background">
+		<div class="hostwrap">
+			<div class="hostbrowser" id="regiterlist">
+			</div>
+			<div id="confirm_button">
+				<button class="button_open" id="password_input_button_ok" type="button">
+					<span class="text_button_action">OK</span>
+				</button>
+				<button class="button_cancel" id="password_input_button_cancel" type="button">
+					<span class="text_button_action">Cancel</span>
+				</button>
+			</div>
+		</div>
+	</div>
 	<script src="src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="js/qatrix-1.1.js"></script>
 	<script type="text/javascript" src="js/animtab.js"></script>
 	<script type="text/javascript" src="js/backfire_filedialog.js"></script>
+	<script type="text/javascript" src="js/RemoteFTP.js"></script>
 	<script type="text/javascript" src="js/editor.js"></script>
 	<script type="text/javascript" src="js/editor_info_view.js"></script>
 	<script type="text/javascript" src="js/editor_exe_view.js"></script>
