--- a/app/editor.html
+++ b/app/editor.html
@@ -318,6 +318,7 @@
 	<script type="text/javascript" src="js/editor_info_view.js"></script>
 	<script type="text/javascript" src="js/editor_exe_view.js"></script>
 	<script type="text/javascript" src="js/editor_edit_view.js"></script>
+	<script type="text/javascript" src="js/password_input.js"></script>
 	<script type="text/javascript" src="js/editor_node_view.js"></script>
 	<script type="text/javascript" src="js/svg.js"></script>
 	<script type="text/javascript" src="js/svg.draggable.js"></script>
