--- a/app/editor.html
+++ b/app/editor.html
@@ -12,6 +12,7 @@
 	<link href="css/editor_exe_view.css" rel="stylesheet"/>
 	<link href="css/editor_edit_view.css" rel="stylesheet"/>
 	<link href="css/editor_node_view.css" rel="stylesheet"/>
+	<link href="css/password_input.css" rel="stylesheet"/>
 	<!--link href="css/filebrowser.css" rel="stylesheet"/-->
 	<link href="css/backfire.css" rel="stylesheet"/>
 </head>
