--- a/app/filebrowser.html
+++ b/app/filebrowser.html
@@ -8,8 +8,10 @@
 		<link rel="stylesheet" href="css/base.css">
 		<link rel="stylesheet" href="css/button.css">
 		<link rel="stylesheet" href="css/filebrowser.css">
+		<link rel="stylesheet" href="css/password_input.css">
 		<script src="socket.io/socket.io.js"></script>
 		<script type="text/javascript" src="js/RemoteFTP.js"></script>
+		<script type="text/javascript" src="js/password_input.js"></script>
 		<script type="text/javascript" src="js/filebrowser.js"></script>
 	</head>
 	<body onload="bootstrap()">
@@ -132,7 +134,19 @@
 
 	</div>
 		
-	<div class="popup_background" id="popup_background"></div>
-		
+	<div class="popup_background" id="popup_background">
+		<div class="hostwrap">
+			<div class="hostbrowser" id="regiterlist">
+			</div>
+			<div id="confirm_button">
+				<button class="button_open" id="password_input_button_ok" type="button">
+					<span class="text_button_action">OK</span>
+				</button>
+				<button class="button_cancel" id="password_input_button_cancel" type="button">
+					<span class="text_button_action">Cancel</span>
+				</button>
+			</div>
+		</div>
+	</div>
 	</body>
 </html>
