fix remotehost type input remove test button from remote host list

--- a/app/remotehost.html
+++ b/app/remotehost.html
@@ -24,7 +24,7 @@
 			<div class="grp_floatleft">
 				<div class="grp_floatleft">
 					<div class="text_label">Type</div>
-					<input id="input_type" class="input_info"  placeholder="machineid"></input>
+					<input id="input_type" class="input_info"  placeholder="machineid" required ></input>
 				</div>
 				<div class="grp_floatleft">
 					<div class="text_label">Label</div>
